--- a/css/index.css
+++ b/css/index.css
@@ -7,8 +7,8 @@ link[rel="icon"] {
 body {
     margin: 0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0C2D57;
-    color: #e113a0ec;
+    background-color: #F1FAFF;
+    color: #00458B;
     height: 100%;
 }
 
@@ -34,22 +34,24 @@ body {
     margin-right: 10px;
     text-decoration: none;
     font-size: 1.5em;
-    color: #fff;
+    color: #00458B;
 }
 .social-links a:hover{
   font-size: 2em;
 }
 .social-links a:nth-child(7) {
   font-size: 1.5em;
+  color: white;
 }
 .social-links a:nth-child(8) {
   font-size: 1.5em;
+  color: white;
 }
 
 
 .recuriter-link,
 .resume-link {
-    background-color: #FC6736;
+    background-color: #3FD2C7;
     border-radius: 15px 0 15px 0;
     border: none;
     color: #27272a;
@@ -63,7 +65,7 @@ body {
 }
 
 .resume-link:hover, .recuriter-link:hover {
-    background-color: #d8592e;
+    background-color: #3FD2C7;
 }
 
 .bi-github:hover{
@@ -108,7 +110,6 @@ body {
     align-items: flex-start;
     padding: 20px;
     height: 80vh;
-    background: linear-gradient(#0C2D57);
 }
 
 .left {
@@ -126,7 +127,7 @@ body {
     padding: 20px;
     border-radius: 5px;
     overflow: auto;
-    color: #fff;
+    color: #00458B;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     height: 95%;
 }
@@ -135,10 +136,10 @@ body {
   cursor: pointer;
   margin-bottom: 10px;
   padding: 8px 8px;
-  color: #e4e4e7;
+  color: #00458B;
   border-width: 1px 1px 0 1px;
   border-style: solid;
-  border-color: #e4e4e7;
+  border-color: #F1FAFF;
   border-radius: 20px 100px 0 0;
   box-shadow: 0 -5px 20px 0 rgba(23, 22, 22, 0.5);
   position: relative;
@@ -152,8 +153,8 @@ body {
 
 .nav-option:hover {
   /* color: #3e94f5;  */
-  background: linear-gradient(to bottom, #bc1888, #bc18886d);
-  /* border-color: #bc1888; */
+  /* background: linear-gradient(to bottom, #99DDFF, #F1FAFF); */
+  border-color: #99DDFF;
 }
 
 
@@ -176,14 +177,15 @@ body {
 .line {
     width: 100%;
     height: 2px;
-    background-color: #e4e4e7;
+    background-color: #00458B;
     margin: 10px 0;
+
 }
 
 .profile-image img {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border: 1px solid #e4e4e7;
     transition: transform 0.5s ease, transform-origin 0.3s ease, scale 0.3s ease;
@@ -228,330 +230,6 @@ body {
 }
 
 /* github page */
-
-  .open-walkthrough {
-    border: 0;
-    background: #5da3f2;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 0.15em;
-    font-size: 12px;
-    height: 40px;
-    width: 120px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -20px;
-    margin-left: -60px;
-  }
-  
-  .walkthrough {
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.23), 0 10px 40px rgba(0, 0, 0, 0.19);
-    background: linear-gradient(to right bottom, #9e66c6, #6027e1);
-    border-radius: 0;
-    display: none;
-    flex-direction: column;
-    flex: 0 0 auto;
-    font-size: 14px;
-    height: 464px;
-    overflow: hidden;
-    transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-    width: 280px;
-    z-index: 1000;
-  }
-  .walkthrough.show {
-    display: flex;
-    opacity: 0;
-    transform: translateY(72px);
-  }
-  .walkthrough.reveal {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  .walkthrough .walkthrough-body {
-    align-items: center;
-    display: flex;
-    flex: 1;
-    text-align: center;
-  }
-  .walkthrough .walkthrough-body .prev-screen,
-  .walkthrough .walkthrough-body .next-screen {
-    align-self: stretch;
-    background: none;
-    border: 0;
-    margin-top: 40px;
-    color: rgba(255, 255, 255, 0.25);
-    cursor: pointer;
-    flex: 0 0 auto;
-    font-size: 24px;
-    opacity: 1;
-    outline: none;
-    padding: 16px;
-    transform: scale(1);
-    transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-    z-index: 1000;
-  }
-  .walkthrough .walkthrough-body .prev-screen:hover, .walkthrough .walkthrough-body .prev-screen:active,
-  .walkthrough .walkthrough-body .next-screen:hover,
-  .walkthrough .walkthrough-body .next-screen:active {
-    color: white;
-    transform-origin: center;
-    transform: scale(1.25);
-  }
-  .walkthrough .walkthrough-body .prev-screen:disabled,
-  .walkthrough .walkthrough-body .next-screen:disabled {
-    opacity: 0;
-  }
-  .walkthrough .walkthrough-body .prev-screen {
-    order: 1;
-  }
-  .walkthrough .walkthrough-body .next-screen {
-    order: 3;
-  }
-  .walkthrough .walkthrough-body .screens {
-    flex: 1;
-    align-self: stretch;
-    position: relative;
-    margin: 0 -16px;
-    padding: 0;
-    order: 2;
-  }
-  .walkthrough .walkthrough-body .screens .screen {
-    position: absolute;
-    list-style-type: none;
-  }
-  .walkthrough .walkthrough-body .media {
-    background: rgba(255, 255, 255, 0.25);
-    border-radius: 132px;
-    height: 132px;
-    margin: 32px auto;
-    width: 132px;
-  }
-  .walkthrough .walkthrough-body h3 {
-    font-size: 15px;
-    line-height: 1.4em;
-    text-transform: uppercase;
-    letter-spacing: 0.15em;
-  }
-  .walkthrough .walkthrough-body p {
-    line-height: 1.6em;
-    font-size: 13px;
-    margin-top: 16px;
-    padding-top: 0;
-    color: rgba(255, 255, 255, 0.8);
-  }
-  .walkthrough .walkthrough-pagination {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    margin-top: 24px;
-  }
-  .walkthrough .walkthrough-pagination .dot {
-    background: rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
-    height: 8px;
-    margin: 0 4px;
-    transform: scale(0.75);
-    transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-    width: 8px;
-  }
-  .walkthrough .walkthrough-pagination .dot.active {
-    background: white;
-    transform: scale(1);
-    transition-delay: 0.4s;
-  }
-  .walkthrough .walkthrough-footer {
-    display: flex;
-    flex: 0 0 auto;
-    justify-content: space-around;
-    padding: 0;
-  }
-  .walkthrough .walkthrough-footer button {
-    height: 40px;
-    border: 0;
-    background: #5da3f2;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 0.15em;
-    border-radius: 0;
-    color: white;
-    flex: 1;
-    font-size: 12px;
-    margin: 0;
-    outline: 0;
-    padding: 12px;
-    transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-    cursor: pointer;
-  }
-  .walkthrough .walkthrough-footer button:hover {
-    background: #6babf3;
-  }
-  .walkthrough .walkthrough-footer button:active {
-    background: #5da3f2;
-  }
-  .walkthrough .walkthrough-footer button:disabled {
-    cursor: pointer;
-  }
-  .walkthrough .walkthrough-footer button.finish {
-    background: #3e94f5;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    opacity: 0;
-    transform: scale(0, 1);
-    transform-origin: center;
-    transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-  }
-  .walkthrough .walkthrough-footer button.finish:hover {
-    background: #4d9cf6;
-  }
-  .walkthrough .walkthrough-footer button.finish:active {
-    background: #3e94f5;
-  }
-  .walkthrough .walkthrough-footer button.finish.active {
-    transform: scale(1, 1);
-    opacity: 1;
-  }
-  .walkthrough .screens {
-    margin: 0;
-  }
-  .walkthrough .screens .media .status-badge {
-    left: 136px;
-    opacity: 0;
-    position: absolute;
-    top: 104px;
-    transform: scale(0);
-    transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-    transition-delay: 0.6s;
-  }
-  .walkthrough .screens .media .status-badge i {
-    display: inline;
-  }
-  .walkthrough .screens .media.logo .logo {
-    margin-top: 20px;
-    opacity: 0;
-    transform: translateY(-60px);
-    transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-    width: 80px;
-  }
-  .walkthrough .screens .media .icon {
-    position: absolute;
-    opacity: 0;
-    transform: translateY(-30px);
-    transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-    width: 132px;
-    left: 48px;
-    top: 32px;
-  }
-  .walkthrough .screens .media.bars .icon {
-    transform: translate(40px, 20px);
-  }
-  .walkthrough .screens .media.bars .icon:nth-of-type(2) {
-    transform: scale(0.25);
-    transform-origin: 30% 54%;
-  }
-  .walkthrough .screens .media.bars .icon:nth-of-type(3) {
-    transform: scale(0.25);
-    transform-origin: 30% 40%;
-  }
-  .walkthrough .screens .media.bars .icon:nth-of-type(4) {
-    transform: scale(0.25);
-    transform-origin: 30% 26%;
-  }
-  .walkthrough .screens .media.files .icon {
-    transform: translate(40px, 20px);
-  }
-  .walkthrough .screens .media.comm .icon {
-    transform: scale(0.25);
-    transform-origin: 29% 73%;
-  }
-  .walkthrough .screens .media.comm .icon:nth-child(2) {
-    transform-origin: 66% 85%;
-  }
-  .walkthrough .screens .screen {
-    opacity: 0;
-    position: absolute;
-    transform: translateX(-72px);
-    transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-  }
-  .walkthrough .screens .screen.active {
-    opacity: 1;
-    transform: translateX(0) scale(1);
-    transition-delay: 0.4s;
-  }
-  .walkthrough .screens .screen.active ~ .screen {
-    opacity: 0;
-    transform: translateX(72px);
-  }
-  .walkthrough .screens .screen.active .media .status-badge {
-    opacity: 1;
-    transform: scale(1.75);
-  }
-  .walkthrough .screens .screen.active .media.logo .logo {
-    opacity: 0.8;
-    transform: translateY(0);
-    transition-delay: 0.6s;
-  }
-  .walkthrough .screens .screen.active .media.logo .status-badge {
-    transition-delay: 1s;
-  }
-  .walkthrough .screens .screen.active .media.books .icon {
-    opacity: 1;
-    transform: translateY(0);
-    transition-delay: 0.6s;
-  }
-  .walkthrough .screens .screen.active .media.books .icon:nth-child(2) {
-    transition-delay: 0.725s;
-  }
-  .walkthrough .screens .screen.active .media.books .icon:nth-child(3) {
-    transition-delay: 0.85s;
-  }
-  .walkthrough .screens .screen.active .media.books .status-badge {
-    transition-delay: 1.4s;
-  }
-  .walkthrough .screens .screen.active .media.bars .icon {
-    opacity: 1;
-    transform: translate(0) scale(1);
-    transition-delay: 0.6s;
-  }
-  .walkthrough .screens .screen.active .media.bars .icon:nth-child(2) {
-    transition-delay: 1.05s;
-  }
-  .walkthrough .screens .screen.active .media.bars .icon:nth-child(3) {
-    transition-delay: 0.925s;
-  }
-  .walkthrough .screens .screen.active .media.bars .icon:nth-child(4) {
-    transition-delay: 0.8s;
-  }
-  .walkthrough .screens .screen.active .media.files .icon {
-    opacity: 1;
-    transform: translateY(0);
-    transition-delay: 0.9s;
-  }
-  .walkthrough .screens .screen.active .media.files .icon:nth-child(3) {
-    transition-delay: 0.8s;
-  }
-  .walkthrough .screens .screen.active .media.files .icon:nth-child(2) {
-    transition-delay: 0.7s;
-  }
-  .walkthrough .screens .screen.active .media.files .icon:nth-child(1) {
-    transition-delay: 0.6s;
-  }
-  .walkthrough .screens .screen.active .media.files .status-badge {
-    transition-delay: 1.6s;
-  }
-  .walkthrough .screens .screen.active .media.comm .icon {
-    opacity: 1;
-    transform: scale(1);
-    transition-delay: 0.6s;
-  }
-  .walkthrough .screens .screen.active .media.comm .icon:nth-child(2) {
-    transition-delay: 0.8s;
-  }
-  .walkthrough .screens .screen.active .media.comm .status-badge {
-    transition-delay: 1.6s;
-  }
 
 #github-repos {
     /* margin: 5vh 2vh; */
