change footer background color

--- a/css/index.css
+++ b/css/index.css
@@ -433,7 +433,7 @@ footer {
   display: flex;
   /* flex-direction: column; */
   justify-content: space-between;
-  background-color: #ffb0b0aa;
+  background-color:#00458B;
   padding: 20px;
   color: #0C2D57;
 }
