--- a/css/index.css
+++ b/css/index.css
@@ -7,8 +7,8 @@ link[rel="icon"] {
 body {
     margin: 0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #F1FAFF;
-    color: #00458B;
+    background-color: #121212;
+    color: #BFBFBF;
     height: 100%;
 }
 
@@ -34,7 +34,7 @@ body {
     margin-right: 10px;
     text-decoration: none;
     font-size: 1.5em;
-    color: #00458B;
+    color: #fff;
 }
 .social-links a:hover{
   font-size: 2em;
@@ -51,7 +51,7 @@ body {
 
 .recuriter-link,
 .resume-link {
-    background-color: #3FD2C7;
+    background-color: #8E44AD;
     border-radius: 15px 0 15px 0;
     border: none;
     color: #27272a;
@@ -65,7 +65,7 @@ body {
 }
 
 .resume-link:hover, .recuriter-link:hover {
-    background-color: #3FD2C7;
+    background-color: #8922b4;
 }
 
 .bi-github:hover{
@@ -118,8 +118,10 @@ body {
     margin-right: 18px;
     border-radius: 5px;
     overflow: auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    color: white;
     height: 99%;
+    background-color: #1E3A8A;
 }
 
 .right {
@@ -127,8 +129,9 @@ body {
     padding: 20px;
     border-radius: 5px;
     overflow: auto;
-    color: #00458B;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    color: #fff;
+    background-color: #1E3A8A;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     height: 95%;
 }
 
@@ -137,11 +140,11 @@ body {
   margin-bottom: 10px;
   padding: 8px 8px;
   color: #00458B;
-  border-width: 1px 1px 0 1px;
+  border-width: 2px 2px 0 2px;
   border-style: solid;
   border-color: #F1FAFF;
   border-radius: 20px 100px 0 0;
-  box-shadow: 0 -5px 20px 0 rgba(23, 22, 22, 0.5);
+  box-shadow: 0 -5px 20px 0 rgba(80, 79, 79, 0.2);
   position: relative;
   transition: color 0.3s; 
 }
@@ -155,6 +158,7 @@ body {
   /* color: #3e94f5;  */
   /* background: linear-gradient(to bottom, #99DDFF, #F1FAFF); */
   border-color: #99DDFF;
+  border: 2px 2px 0px 2px solid #99DDFF;
 }
 
 
@@ -433,7 +437,7 @@ footer {
   display: flex;
   /* flex-direction: column; */
   justify-content: space-between;
-  background-color:#00458B;
+  background-color: #3FD2C7;
   padding: 20px;
   color: #0C2D57;
 }
