--- a/css/index.css
+++ b/css/index.css
@@ -121,7 +121,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     color: white;
     height: 99%;
-    background-color: #1E3A8A;
+    background-color: #171717;
 }
 
 .right {
@@ -130,7 +130,7 @@ body {
     border-radius: 5px;
     overflow: auto;
     color: #fff;
-    background-color: #1E3A8A;
+    background-color: #171717;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     height: 95%;
 }
@@ -139,7 +139,7 @@ body {
   cursor: pointer;
   margin-bottom: 10px;
   padding: 8px 8px;
-  color: #00458B;
+  color: #fafafa;
   border-width: 2px 2px 0 2px;
   border-style: solid;
   border-color: #F1FAFF;
@@ -175,7 +175,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 20px 20px 0px 20px;
 }
 
 .line {
@@ -188,8 +188,8 @@ body {
 
 .profile-image img {
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
+    width: 7em;
+    height: 7em;
     object-fit: cover;
     border: 1px solid #e4e4e7;
     transition: transform 0.5s ease, transform-origin 0.3s ease, scale 0.3s ease;
@@ -204,6 +204,7 @@ body {
 .name {
     color: #e4e4e7;
     margin-top: 10px;
+    font-size: 1.5em;
 }
 /* Add this to your existing CSS */
 
