--- a/css/researchContributuion.css
+++ b/css/researchContributuion.css
@@ -10,7 +10,7 @@
 
 .tech-category {
     width: 100%; /* Adjust the width as needed */
-    background-color: #0C2D57;
+    background-color: #2a2a2b;
     margin: 10px; /* Adjust the margin as needed */
     padding: 15px;
     border-radius: 10px;
