--- a/css/project-section.css
+++ b/css/project-section.css
@@ -1,3 +1,17 @@
+h2 {
+    /* color: #333; */
+    text-align: center;
+    margin: 10px 0px 10px 0px;
+}
+
+.line-right-div {
+    width: 50%;
+    height: 2px;
+    background-color: #8922b4;
+    margin: 10px 225px;
+
+
+}
 
 /* Project Section Styles */
 .prj-category {
@@ -39,13 +53,14 @@
     width: 200px;
     display: inline-block;
     vertical-align: top;
-    background-color: #FFB0B0;
+    background-color: #2a2a2b;
     overflow-wrap: break-word;
 
 }
 
 .prj-box h4 {
-    margin-bottom: 5px;
+    margin-bottom: 2px;
+    margin-top: -1px;
     font-size: 16px;
 }
 
