--- a/css/tech-stack.css
+++ b/css/tech-stack.css
@@ -1,4 +1,14 @@
 /* tech stack */
+h2{
+    text-align: center;
+}
+.line-right-div {
+    width: 50%;
+    height: 2px;
+    background-color: #8922b4;
+    margin: 10px 225px;
+}
+
 .tech-stack {
     display: flex;
     justify-content: space-around; /* Adjust alignment as needed */
