--- a/css/index.css
+++ b/css/index.css
@@ -247,6 +247,15 @@ body {
 }
 
 
+.git-line {
+  width: 100%;
+  height: 1.2px;
+  background-color: #fff;
+  margin: 10px 0;
+  align-items: center;
+
+}
+
 .carousel-container {
     display: flex;
     /* background: linear-gradient(#0C2D57,#010409 ); */
@@ -256,6 +265,7 @@ body {
     overflow: hidden;
     position: relative;
 }
+
 
 
 .carousel {
@@ -379,15 +389,16 @@ body {
   padding: 8px 15px;
   border: none;
   border-radius: 15px 15px 0 0;
-  background-color: #FC6736; /* Adjust the background color as needed */
+  background-color: #8922b4; /* Adjust the background color as needed */
   color: #fff; /* Text color */
   cursor: pointer;
-  transition: background-color 0.5s ease; /* Transition for background color */
 }
 
 .contact-section button:hover {
-  background-color: #FFB0B0; /* Adjust the hover background color */
+  background-color: #69198b; /* Adjust the hover background color */
   font-size: 30px;
+  padding: 12px 15px;
+
 }
 
 .contact-section:hover .contact-content {
@@ -441,7 +452,7 @@ footer {
   display: flex;
   /* flex-direction: column; */
   justify-content: space-between;
-  background-color: #3FD2C7;
+  background-color: #d09fe5;
   padding: 20px;
   color: #0C2D57;
 }
