--- a/css/index.css
+++ b/css/index.css
@@ -513,6 +513,7 @@ h2 {
         text-align: center;
         position: fixed;
         width: 100%;
+        height: 8vh;
         padding: 20px;
         z-index: 9;
         background-color: #121212;
@@ -541,6 +542,10 @@ h2 {
         padding: 10px 0;
     }
 
+    .nav-links.open {
+        display: flex;
+    }
+
     .nav-links a {
         padding: 10px 20px;
         font-size: 1.5em;
@@ -553,70 +558,67 @@ h2 {
         top: 15px;
     }
 
-    .home .content-wrapper{
+    .home .content-wrapper {
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
         align-content: center;
     }
 
-    .home-name{
+    .home-name {
         font-size: 0.5em;
-
     }
 
-    .profile-image{
+    .profile-image {
         position: relative;
         left: -50px;
         margin-bottom: 20px;
     }
-    #about-me{
+
+    #about-me {
         align-items: baseline;
     }
-    .left-about{
+
+    .left-about {
         display: flex;
         align-items: center;
         position: relative;
-        
     }
 
-    .about-me .content-wrapper{
+    .about-me .content-wrapper {
         display: flex;
         align-items: center;
     }
 
-    .prj-nav{
+    .prj-nav {
         display: flex;
         flex-direction: row;
     }   
 
-    .prj{
+    .prj {
         width: 100%;
     }
-    .projs{
+
+    .projs {
         position: relative;
         top: 5vh;
     }
-    
-    .prj-container{
+
+    .prj-container {
         display: flex;
         flex-direction: column;
     }
-
-
-    
-
 }
 
 @media (max-width: 480px) {
-    .prj-nav{
+    .prj-nav {
         display: flex;
         flex-direction: column;
         position: relative;
         top: 10vh;
     }  
 
-    .research-container{
+    .research-container {
         width: 100%;
     }
 }
